k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: studio-s
  labels:
    name: studio-s
